FindYoursNew/src/assets/css/App.scss
//! main imports
@import './functional/nullset.scss';
@import './functional/variables.scss';
@import './functional/mixins.scss';

html{
     height: auto;
     scroll-behavior: smooth;
}
body, .App, #root{
     font-size: $fontSize;
     min-width: $minWidth;
     display: flex;
     flex-direction: column;
     background: $color-background-main;
     align-items: center;
     min-height: 100vh;
     width: 100%;
     overflow-y: hidden;
}

main{
     flex-grow: 1;
}

:root{
     font-size: 16px;
     --color-link-hover:#D6ACD4;
     --color-main-white: #FFFFFF;
}

.content-container{
     max-width: 84rem;
     width: 100%;
}

.App{
     padding: 0 48px;
     padding-bottom: 4rem;
}

a{
     color: $color-black;
     transition: $transition-main-2;
     &:hover{
          @media #{$mouse-device} {
               color: $color-link-hover;
               }
          }
}

input[type = 'submit']{
     max-width: 10rem;
     width: 100%;
     cursor: pointer;
     color: var(--color-main-white);
     border:1px solid var(--color-link-hover);
     background-color: var(--color-link-hover);
     transition: all ease-out .3s;
     &:hover{
          color: var(--color-link-hover);
          background-color: var(--color-main-white);
     }
}

.content-box{
     border: 0.5px solid #eff2f3;
     box-shadow: 0 0 1px #00000014, 0 8px 20px #0000000f;
     border-radius: 12px;
     // margin-top: 1.5rem;
     padding: 1.5rem;
}

.profile-skill{
     span{
          cursor: default;
     }
     a{
          cursor: pointer;
     }
}

//* etc. imports
@import './components/loader.scss';

